cabal-version:      2.4
name:               wisp
version:            0.1.0.0
homepage:           https://github.com/m4xine/wisp
bug-reports:        https://github.com/m4xine/wisp/issues
license:            MIT
author:             m4xine
maintainer:         maxined@pm.me
category:           Compilers/Interpreters

library
    exposed-modules: 
    other-modules:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable wisp
    main-is:          Main.hs
    other-modules:
    build-depends:
        base ^>=4.14.3.0,
        wisp
    hs-source-dirs:   app
    default-language: Haskell2010
